--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ gunicorn==19.6.0
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
+psycopg2==2.6.2
 Werkzeug==0.11.9
 flask_login==0.3.2
 flask_mail==0.9.1
